# qimageblitz

./: CMakeLists.txt
blitz/: CMakeLists.txt  asm_scale.S  convolve.cpp  gradient.cpp  histogram.cpp
test/: CMakeLists.txt  mainwindow.cpp
